plugins {
    id 'java-library'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'me.modmuss50.mod-publish-plugin' version '1.1.0'
}

tasks.named('wrapper', Wrapper).configure {
	distributionType = Wrapper.DistributionType.BIN
}

apply from: 'https://raw.githubusercontent.com/FTBTeam/mods-meta/v1/gradle/maven.gradle'
apply from: 'https://raw.githubusercontent.com/FTBTeam/mods-meta/v1/gradle/publishing-2.gradle'
apply from: 'https://raw.githubusercontent.com/FTBTeam/mods-meta/v1/gradle/utils.gradle'
apply from: 'https://raw.githubusercontent.com/FTBTeam/mods-meta/v1/gradle/changelog.gradle'

version = createModVersion(project)
group = project.maven_group

base {
	archivesName = archives_base_name
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    version = project.neoforge_version

    runs {
        configureEach {
            logLevel = org.slf4j.event.Level.DEBUG
        }

        client {
            client()
        }

        server {
            server()
            programArguments.add('--nogui')
        }

        clientData {
            clientData()
            programArguments.addAll('--mod', project.mod_id, '--all',
                '--output', file('src/generated/resources/').absolutePath,
                '--existing', file('src/main/resources/').absolutePath)
        }

        gameTestServer {
            type = 'gameTestServer'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
    }

    mods {
        "${project.mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
	mavenCentral()
	commonMavenRepos(repositories)

    maven {
        name = "Jared's Maven"
        url = "https://maven.blamejared.com/"
        content {
            includeGroup "mezz.jei"
        }
    }
}

configurations.all {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

dependencies {
    // JEI - wired up for Phase 6 integration; safe to leave as compileOnly until then
    compileOnly("mezz.jei:jei-26.1.2-neoforge-api:29.5.0.26")
    runtimeOnly("mezz.jei:jei-26.1.2-neoforge:29.5.0.26")

    // Jade - block-info tooltips. Compile against the CurseForge jar; same coordinates as
    // the auroral reference project.
    implementation("curse.maven:jade-324717:7817285")

    // GuideME - In-game guidebook (optional)
    implementation("org.appliedenergistics:guideme:${guideme_version}")
}

tasks.withType(ProcessResources).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    var replaceProperties = [
            mod_id                 : mod_id,
            version                : version,
            minecraft_version      : minecraft_version,
            neoforge_loader_version: neoforge_loader_version,
            minecraft_version_range: minecraft_version_range,
            neoforge_version: neoforge_version,
            neoforge_version_range: neoforge_version_range,
            guideme_version_range: guideme_version_range,
    ]

    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

createMavenPublishingBlock(project)

publishMods {
    file = jar.archiveFile

	dryRun = providers.environmentVariable("CURSEFORGE_KEY").getOrNull() == null || providers.environmentVariable("SKIP_CURSEFORGE").getOrNull() != null
	changelog = createChangelog(project)
	version = project.version
	type = createReleaseType(project)

	modLoaders.add("neoforge")

    curseforge {
        projectId = project.curseforge_id
        projectSlug = "ftb-industrial-contraptions"
        accessToken = providers.environmentVariable("CURSEFORGE_KEY")
        minecraftVersions.add(minecraft_version)
        optional("jei", "jade", "guideme")
    }
}
